<resources>
    <string name="app_name">Robbie Williams App</string>
    <string name="tv_version">Version 1.0</string>
    <string name="tv_author">© 2023 Kovbasiuk Hanna</string>
    <string name="tv_name1">Name: </string>
    <string name="tv_popularity">Popularity: </string>
    <string name="tv_genres">Genres: </string>
    <string name="tv_followers">Followers</string>
    <string name="tv_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_app">Welcome to App</string>
    <string name="please_select_a_menu_item">Please select a menu item</string>

</resources>