<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAbaut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_about"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginTop="8dp"
            android:text="@string/tv_version"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginTop="8dp"
            android:text="@string/tv_author"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>