<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivArtist"
            android:layout_width="match_parent"
            android:layout_height="536dp"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

<!--            <TextView-->
<!--                android:id="@+id/tvName1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center|center_horizontal|center_vertical"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/tv_name1"-->
<!--                android:textColor="@color/gray" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvName"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center|center_horizontal|center_vertical"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="@color/gray" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

<!--            <TextView-->
<!--                android:id="@+id/tvPopularity1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center|center_horizontal|center_vertical"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/tv_popularity"-->
<!--                android:textColor="@color/gray" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvPopularity"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center|center_horizontal|center_vertical"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="@color/gray" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

<!--            <TextView-->
<!--                android:id="@+id/tvGenres1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center|center_horizontal|center_vertical"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/tv_genres"-->
<!--                android:textColor="@color/gray" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvGenres"-->
<!--                android:layout_width="60dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center|center_horizontal|center_vertical"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="@color/gray" />-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

<!--            <TextView-->
<!--                android:id="@+id/tvFollowers1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/tv_followers" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvFollowers"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1" />-->

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:id="@+id/tvName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_name1"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tvPopularity1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_popularity"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPopularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tvGenres1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_genres"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvGenres"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tvFollowers1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tv_followers"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

    
</FrameLayout>